--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.data.mongodb.uri=mongodb+srv://user:cW2600bx!@cluster0-3e59o.mongodb.net/shop_db?retryWrites=true&w=majority
 spring.data.mongodb.database=shop_db
 server.port=8000
 spring.security.user.name=user1
